--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "BRINDA"]
+	path = BRINDA
+	url = https://github.com/hanqiluo/brinda
+	shallow = true
+	registered = true
